fixed aligner

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -168,3 +168,24 @@ html {
 		font-size: 0.4em;
 	}
 }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: inherit;
+  font-weight: normal;
+  opacity: 0.5;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: inherit;
+  font-weight: normal;
+  opacity: 0.5;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: inherit;
+  font-weight: normal;
+  opacity: 0.5;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: inherit;
+  font-weight: 100;
+  opacity: 0.5;
+}
